# pixelator-core

./: .gitattributes  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  profile.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: divan2json.py
.github/workflows/: bench.yml  build.yml  check-version-bump.yml  docs.yml  lint.yml  on_commit.yml  test.yml  wheels.yml
dev/bench/: data.js
dev/docs/: crates.js  help.html  index.html  settings.html  src-files.js
dev/docs/community_detection/: all.html  enum.Commands.html  fn.main.html  fn.run_flp.html  fn.run_leiden.html  index.html  sidebar-items.js  static.GLOBAL.html  struct.Cli.html
dev/docs/pixelator_core/: all.html  index.html  sidebar-items.js
dev/docs/pixelator_core_py/: all.html  fn.find_graph_statistics.html  fn.run_hybrid_community_detection.html  fn.run_label_propagation.html  fn.run_leiden.html  index.html  sidebar-items.js  struct.PyGraphProperties.html
dev/docs/search.index/: 0033703a8874.js  00e6e01a5422.js  0126ba8fb26c.js  01b47a7b86b2.js  0290699a39de.js  02ece2772722.js  03111a0ff7a7.js  03d0a2731450.js  047e6a899c9f.js  06561c65bbcd.js  07ee764b7524.js  08103d52070e.js  0830f8674476.js  0849bbde39f3.js  0bc250cfe170.js  0c225131144d.js  0c6c01b3c076.js  0cc9ef723d93.js  0e18f9e24630.js  0e24ab11bd14.js  0e25131d1db0.js  0fd98cca710a.js  103a93e71e22.js  112f95d77cd3.js  117a56ece69d.js  11a65555eec3.js  12f7274489fe.js  131c8b2df7e4.js  13d2576a31bc.js  143b09684e63.js  15ec221bde7a.js  168902c65536.js  1915b76d3164.js  199168e168ba.js  (+193 more)
scripts/: test-python-bindings.sh
(+170 files in other folders)
