[workspace]
members = ["packages/cli", "packages/pixelator_core", "packages/python_bindings"]
resolver = "3"

# Single source of truth for Rust crates and Python wheels (maturin reads this via the crate).
# Prereleases use Cargo semver (e.g. 0.1.0-rc1); PEP 440 treats that as the same release as 0.1.0rc1.
[workspace.package]
version = "0.1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
lto = false
codegen-units = 16     # More units = less cross-unit inlining
opt-level = 2
